@@ -1,45 +1,35 @@
+import com.github.benmanes.gradle.versions.updates.DependencyUpdatesTask
+
 // NOTE: Only pre-include plugins (apply false) required by the modules android, common
 // and desktop within this block to keep them excluded from the root module.
 // If the plugin can't be resolved add a custom resolution strategy to `settings.gradle.kts`.
 plugins {
     // reports versions of dependencies
     // e.g. `gradle dependencyUpdates`
-    id("com.github.ben-manes.versions") version "0.41.0"
+    id("com.github.ben-manes.versions") version "0.42.0"
 
-    id("org.owasp.dependencycheck") version "6.5.2.1" apply false
+    id("org.owasp.dependencycheck") version "7.1.0.1" apply false
 
     // generates licence report
     id("com.jaredsburrows.license") version "0.8.90" apply false
 
-    kotlin("multiplatform") version "1.6.10" apply false
-    kotlin("plugin.serialization") version "1.6.10" apply false
-    id("org.jetbrains.kotlin.android") version "1.6.10" apply false
-    id("com.android.application") version "7.0.4" apply false
-    id("com.android.library") version "7.0.4" apply false
-    id("dagger.hilt.android") version "2.40.5" apply false
-    id("org.jetbrains.compose") version "1.0.1" apply false
+    kotlin("multiplatform") version "1.7.0" apply false
+    kotlin("plugin.serialization") version "1.7.0" apply false
+    id("com.google.android.libraries.mapsplatform.secrets-gradle-plugin") version "2.0.1" apply false
+    id("io.realm.kotlin") version "1.0.2" apply false
+    id("org.jetbrains.kotlin.android") version "1.7.0" apply false
+    id("com.android.application") version "7.3.1" apply false
+    id("com.android.library") version "7.3.1" apply false
+    id("org.jetbrains.compose") version "1.2.0-alpha01-dev753" apply false
     id("com.codingfeline.buildkonfig") version "0.11.0" apply false
+    id("io.gitlab.arturbosch.detekt") version "1.20.0"
 }
-
-// BUG: Workaorund for missing metadata https://issuetracker.google.com/issues/206855609
-// TODO: Remove if we can upgrade to AGP >= 7.1.*
-buildscript {
-    if (!System.getProperty("os.name").toLowerCase().contains("windows")) {
-        repositories {
-            maven("https://storage.googleapis.com/r8-releases/raw")
-        }
-        dependencies {
-            classpath("com.android.tools:r8:3.1.42")
-        }
-    }
-}
-// END
 
 val ktlintMain by configurations.creating
 val ktlintRules by configurations.creating
 
 dependencies {
-    ktlintMain("com.pinterest:ktlint:0.42.1") {
+    ktlintMain("com.pinterest:ktlint:0.46.1") {
         attributes {
             attribute(Bundling.BUNDLING_ATTRIBUTE, objects.named(Bundling.SHADOWED))
         }
@@ -58,6 +48,26 @@ val sourcesKt = listOf(
     "**/*.gradle.kts"
 )
 
+detekt {
+    source =
+        fileTree(rootDir) {
+            include(sourcesKt)
+        }
+            .filter { it.extension != "kts" }
+            .map { it.parentFile }
+            .let {
+                files(*it.toTypedArray())
+            }
+    parallel = true
+    config = files("config/detekt/detekt.yml")
+    baseline = file("config/detekt/baseline.xml")
+    buildUponDefaultConfig = false
+    allRules = false
+    disableDefaultRuleSets = false
+    debug = false
+    ignoreFailures = false
+}
+
 fun ktlintCreating(format: Boolean, sources: List<String>, disableLicenceRule: Boolean) =
     tasks.creating(JavaExec::class) {
         description = "Fix Kotlin code style deviations."
@@ -68,6 +78,8 @@ fun ktlintCreating(format: Boolean, sources: List<String>, disableLicenceRule: B
             addAll(sources)
             if (disableLicenceRule) add("--disabled_rules=custom:licence-header")
         }
+        // required for java > 16; see https://github.com/pinterest/ktlint/issues/1195
+        jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED")
     }
 
 val ktlint by ktlintCreating(format = false, sources = sourcesKt, disableLicenceRule = false)
@@ -76,5 +88,18 @@ val ktlintFormat by ktlintCreating(format = true, sources = sourcesKt, disableLi
 tasks.register("clean", Delete::class) {
     rootProject.allprojects.forEach {
         delete(it.buildDir)
+    }
+}
+
+fun isUnstable(version: String): Boolean =
+    version.contains("alpha", ignoreCase = true)
+            || version.contains("rc", ignoreCase = true)
+            || version.contains("beta", ignoreCase = true)
+
+tasks.withType<DependencyUpdatesTask> {
+    outputFormatter = "txt,html"
+    rejectVersionIf {
+        // allows unstable to unstable updates but not stable to unstable
+        isUnstable(candidate.version) && !isUnstable(currentVersion)
     }
 }
